// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionButton renders correctly when not reserved 1`] = `
<button
  className="button joinMission"
  onClick={[MockFunction]}
  type="button"
>
  Join Mission
</button>
`;

exports[`MissionButton renders correctly when reserved 1`] = `
<button
  className="button leaveMission"
  onClick={[MockFunction]}
  type="button"
>
  Leave Mission
</button>
`;
